<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2008 The Android Open Source Project Licensed under the
		Apache License, Version 2.0 (the "License"); you may not use this file
		except in compliance with the License. You may obtain a copy of the
		License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
		by applicable law or agreed to in writing, software distributed under
		the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/eth_radio_ctrl_title">
	<!--
		Programmatically will have dynamic summary, but we provide the
		fallback summary.
	-->
	<CheckBoxPreference android:key="toggle_eth"
		android:title="@string/eth_quick_toggle_title" android:summaryOn="@string/eth_toggle_summary_off"
		android:summaryOff="@string/eth_toggle_summary_on" android:persistent="false" />
	<Preference android:title="@string/eth_conf_perf_title"
		android:summary="@string/eth_conf_summary" android:key="eth_config"
		android:persistent="false" />
	<Preference android:title="@string/back" android:key="eth_back"></Preference>
</PreferenceScreen>
