<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bk"
    >
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		>

	    <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" 
			android:layout_weight="2"
			>
		</LinearLayout>
		
	    <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1" 
			>
			
			<TextView
				android:id="@+id/tv_main_welcome"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/welcome"
			    android:textSize="30sp"
			    android:textColor="@color/orange_color"
			    android:paddingTop="20dip"
			    />
							    
			<TextView
				android:id="@+id/tv_main_thanks"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/thanks"
				android:textSize="20sp"
				android:textColor="@color/balck_color" 
				android:layout_marginTop="20dip"
				/>
			<TextView
				android:id="@+id/tv_main_summary"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/setup_note"
			    android:textSize="20sp"
				android:textColor="@color/balck_color" 
				android:layout_marginTop="20dip"
				/>
	
			<TextView
				android:id="@+id/tv_main_continue"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/txt_continue"
				android:textSize="20sp"
				android:textColor="@color/balck_color"
				android:layout_marginTop="20dip"
				/>
							
		</LinearLayout>	
		
	</LinearLayout>
	
    <RelativeLayout
		android:orientation="horizontal"
		android:layout_height="match_parent"
		android:gravity="bottom|center"
		android:layout_width="match_parent"
		android:layout_gravity="bottom|center">
		
		<Button
			android:id="@+id/btn_main_next"
			android:layout_width="100dp" 
	        android:layout_height="wrap_content"
	        android:background="@drawable/button"
	        android:text="@string/next"
	        android:textColor="@color/balck_color"
	        android:textSize="20dp" />	   
	</RelativeLayout>

</LinearLayout>
