<?xml version="1.0" encoding="utf-8"?>
<FrameLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bk"
    >
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>

	    <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="2"
			>
		</LinearLayout>

	    <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1"
			>
			
			<TextView
				android:id="@+id/tv_finish_finish"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/setup_finish"
			    android:textSize="30sp"
			    android:textColor="@color/orange_color"
			    android:paddingTop="20dip"
				/>
			<TextView
				android:id="@+id/tv_finish_finishsummary"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/finishsummary"
			    android:textSize="20sp"
				android:textColor="@color/balck_color"
				/>
	
			<TextView
				android:id="@+id/tv_finish_finishhelpinfo"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/finishhelpinfo"
			    android:textSize="16sp"
				android:textColor="@color/balck_color"
				/>
			
		</LinearLayout>
	
	</LinearLayout>


  
    <LinearLayout
		android:orientation="horizontal"
		android:layout_height="match_parent"
		android:layout_width="match_parent" 
		android:layout_gravity="bottom">
		
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_gravity="bottom" 
			android:layout_width="fill_parent" 
			android:orientation="horizontal" 
			android:layout_weight="1"
			android:gravity="bottom|center">
		
			<Button
				android:id="@+id/btn_finish_back"
				android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:background="@drawable/buttom_button"
		        android:text="@string/back"
		        android:textColor="@color/balck_color"
		        android:textSize="20dp"
		        />
		        	
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom" 
			android:layout_width="fill_parent" 
			android:layout_weight="1"
			android:gravity="bottom|center">
			
			<Button
				android:id="@+id/btn_finish_done"
				android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:background="@drawable/buttom_button"
		        android:text="@string/finish"
		        android:textColor="@color/balck_color"
		        android:textSize="20dp"
		        />
		        
		</LinearLayout>
	       
	</LinearLayout>

</FrameLayout >
