<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bk"
    >
    
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		>

	    <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="2" 
			>
		</LinearLayout>

	    <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1" 
			>
			
			<TextView
				android:id="@+id/tv_ethnet_wel"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/wel_eth_title"
			    android:textSize="30sp"
			    android:textColor="@color/orange_color"
			    android:paddingTop="20dip"
			    />

			<TextView
				android:id="@+id/tv_ethnet_settip"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/eth_set_tip"
			    android:textSize="20sp"
			    android:textColor="@color/balck_color"
			    />

			<Button
				android:id="@+id/btn_ethnet_configuration"
				android:layout_width="200dp" 
		        android:layout_height="wrap_content"
		        android:background="@drawable/button"
		        android:text="@string/eth_configation"
		        android:textColor="@color/balck_color"
		        android:textSize="20dp" 
		        />

		</LinearLayout>	
	
	</LinearLayout>	
		
   <LinearLayout
		android:orientation="horizontal"
		android:layout_height="match_parent"
		android:layout_width="match_parent" 
		android:layout_gravity="bottom">
		
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_gravity="bottom" 
			android:layout_width="fill_parent" 
			android:orientation="horizontal" 
			android:layout_weight="1"
			android:gravity="bottom|center">
			
				<Button
					android:id="@+id/btn_ethnet_back"
					android:layout_width="wrap_content" 
			        android:layout_height="wrap_content"
			        android:background="@drawable/buttom_button"
			        android:text="@string/back"
			        android:textColor="@color/balck_color"
			        android:textSize="20dp"
			        />
			        
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom" 
			android:layout_width="fill_parent" 
			android:layout_weight="1"
			android:gravity="bottom|center"
			>
				<Button
					android:id="@+id/btn_ethnet_next"
					android:layout_width="wrap_content" 
			        android:layout_height="wrap_content"
			        android:background="@drawable/buttom_button"
			        android:text="@string/next"
			        android:textColor="@color/balck_color"
			        android:textSize="20dp"
			        />	
		</LinearLayout>
	       
	</LinearLayout>

</LinearLayout>